--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
               <h3>Ningún mensaje fue encontrado</h3>
               <p>Ingresa el texto que desees encriptar o desencriptar.</p>
             </div>
-            <p id="text-desencript"></p>
+            <div class="container-hidden">
+              <p id="text-desencript"></p>
+              <button id="btn-copy">Copiar</button>
+            </div>
           </section>
         </section>
       </main>
