--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Encriptador</title>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css">
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
 </head>
 <body>
     <main id="app" class="app">
