creando responsividad y optimizando codigo css

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
             <div class="container-hidden">
               <p id="text-desencript"></p>
-              <button id="btn-copy">Copiar</button>
+              <button class="btn-desencript" id="btn-copy">Copiar</button>
             </div>
           </section>
         </section>
